# gost-r-54084-2010

./: .gitignore  ERRORS.md  README.md  gost_54084_data.py  parse_gost54084.py  pyproject.toml  test_gost_data.py
.github/workflows/: tests.yml
src/gost_54084/: __init__.py  data.py
tests/: test_gost_data.py
